Bug fix and add Cache-Control header

--- a/xml-sitemap-config-sample.ini
+++ b/xml-sitemap-config-sample.ini
@@ -19,7 +19,12 @@ filetypes[] = pdf
 
 [advanced]
 ; The replace array, this works as file => replacement, so 'index.php' => '', would make the index.php be listed as just /
-replacements[index.php] = ""
+; replacements[index.php] = ""
+; replacements[./index.php] = "index.html"
+replacements[./index.php] = ""
+
+; Use latest modified time.
+replacelatestmod[] = ./index.php
 
 ; The XSL file used for styling the sitemap output, make sure this path is relative to the root of the site.
 xsl = "xml-sitemap.xsl"
@@ -32,6 +37,14 @@ changefreq = ""
 ; Set to 0 to not output a priority (recommended).
 priority = 0
 
+; The Cache-Control Header. The "$expire_time" can will be replaced by expire_time from setting.
+; setting "public" would make Cache-Control Header "Cache-Control: public, max-age=3600".
+cache_control = "public, max-age=$expire_time"
+
+; The expire time used in header.
+; Set to 0 to disable Expires header.
+expire_time = 3600
+
 ; Ignore array, all files in this array will be: ignored!
 ignore[] = xml-sitemap.php
-
+ignore[] = ./xml-sitemap.xsl
