Update readme and other instruction.

--- a/xml-sitemap-config-sample.ini
+++ b/xml-sitemap-config-sample.ini
@@ -37,7 +37,7 @@ changefreq = ""
 ; Set to 0 to not output a priority (recommended).
 priority = 0
 
-; The Cache-Control Header. The "$expire_time" can will be replaced by expire_time from setting.
+; The Cache-Control Header. The "$expire_time" will be replaced by expire_time from setting.
 ; setting "public" would make Cache-Control Header "Cache-Control: public, max-age=3600".
 cache_control = "public, max-age=$expire_time"
 
