Add local cache.

--- a/xml-sitemap-config-sample.ini
+++ b/xml-sitemap-config-sample.ini
@@ -7,7 +7,9 @@
 directory = "./"
 
 ; With trailing slash!
-directory_url = "https://example.com/"
+; Empty to use HTTP_HOST from the request.
+; directory_url = "https://example.com/"
+directory_url = ""
 
 ; Whether the script should check sub-folders.
 recursive = true
@@ -20,7 +22,7 @@ filetypes[] = pdf
 [advanced]
 ; The replace array, this works as file => replacement, so 'index.php' => '', would make the index.php be listed as just /
 ; replacements[index.php] = ""
-; replacements[./index.php] = "index.html"
+; replacements[./public/index.php] = "public/index.html"
 replacements[./index.php] = ""
 
 ; Use latest modified time.
@@ -45,6 +47,17 @@ cache_control = "public, max-age=$expire_time"
 ; Set to 0 to disable Expires header.
 expire_time = 3600
 
+; Use local cache if true.
+localcache = true
+
+; The cache file directory.
+; Make sure this directory is writable.
+localcache_file = "./sitemap.xml"
+
+; The cache file expire time(s). Cache after this time will be refreshed.
+localcache_expire = 86400
+
 ; Ignore array, all files in this array will be: ignored!
 ignore[] = xml-sitemap.php
 ignore[] = ./xml-sitemap.xsl
+ignore[] = ./sitemap.xml
